version 0.7.0 not released yet: 
planned: love.graphics.newMesh submodule

fixed?: fixed stream support with vorbis files
fixed: rectangles and circles alpha when using love.graphics.setColor
fixed: Windows support should be totally functional 


version 0.6.3 29.01.2017:

added full joystick support. The API is different then on Love!
added love.filesystem.getSaveDirectory(optional: game, optional: company)
added batch system to fonts
added font:getWidth
added font:getHeight
fixed: build system for windows
fixed: font
fixed: https://github.com/Murii/CLove/issues/26
fixed: love.mouse.isDown()
	 
version 0.6.2 12.01.2017:

added No game screen
added love.window.getDesktopDimensions()
added love.window.getDisplayName()
added love.window.getDisplays()
added love.window.hasFocus()
added love.window.hasMouseFocus()
added love.timer.sleep(seconds)
added love.window.setIcon(imageData)
added love.window.getIcon(),it does not behave like Love.Clove returns the name of the file 
added pixels = ImageData:getString()
added love.filesystem.load(fileName) see: https://love2d.org/wiki

internal: added more functions to image_ImageData
fixed: build system for physfs on linux
