@@ -1,0 +1,7 @@
+#!/bin/sh
+
+mkdir build &&
+cd build && 
+cmake ../ &&
+make && 
+make install DESTDIR="install"
